--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pdf": "^5.7.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -36,6 +37,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23"
   }
 }
